cargo-features = ["strip"]

[workspace]
members = [
  "vm",
  "shell"
]
resolver = "2"

[workspace.package]
version = "0.0.4-dev"
authors = ["jekky"]
edition = "2021"

[workspace.dependencies]
log = "0.4"
thiserror = "1"
anyhow = "1"
rand = "0.8"
itertools = "0.12"
enum-as-inner = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2.3"
intmap = "2"
casey = "0.4"
rustyline = "13"
colored = "2"
gc-arena = "0.5"

[workspace.dependencies.redscript]
git = "https://github.com/jac3km4/redscript.git"
rev = "c96c139"
features = ["arc"]

[workspace.dependencies.redscript-compiler]
git = "https://github.com/jac3km4/redscript.git"
rev = "c96c139"

[workspace.lints.rust]
warnings = "deny"
future-incompatible = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
rust-2018-compatibility = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"

[workspace.lints.clippy]
all = "deny"
semicolon_if_nothing_returned = "deny"
single_match_else = "deny"
redundant_closure_for_method_calls = "deny"
cloned_instead_of_copied = "deny"
redundant_else = "deny"
unnested_or_patterns = "deny"
unreadable_literal = "deny"
type_repetition_in_bounds = "deny"
equatable_if_let = "deny"
implicit_clone = "deny"
default_trait_access = "deny"
explicit_deref_methods = "deny"
explicit_iter_loop = "deny"
inefficient_to_string = "deny"
match_bool = "deny"

[workspace.metadata.release]
pre-release-commit-message = "chore: release {{version}}"
tag-prefix = ""
shared-version = true
publish = false
