[package]
name = "redscript-sh"
version = "0.0.4-dev"
edition = "2018"
publish = false

[dependencies]
redscript = { git = "https://github.com/jac3km4/redscript.git", package = "redscript", rev = "v0.4.0-RC2" }
redscript-compiler = { git = "https://github.com/jac3km4/redscript.git", package = "redscript-compiler", rev = "v0.4.0-RC2" }
redscript-vm = { path = "../vm" }
rustyline = "9.1"
colored = "2"
walkdir = "2.3"
serde = { version = "1", features = ["derive"] }
toml = "0.5"

[package.metadata.release]
disable-tag = true
