[package]
name = "redscript-sh"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
redscript-vm = { path = "../vm" }
redscript.workspace = true
redscript-compiler.workspace = true
anyhow.workspace = true
serde.workspace = true
walkdir.workspace = true
toml.workspace = true
rustyline.workspace = true
colored.workspace = true

[lints]
workspace = true

[package.metadata.release]
disable-tag = true
