[package]
name = "redscript-vm"
version = "0.0.3"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redscript = { git = "https://github.com/jac3km4/redscript.git", package = "redscript", rev = "v0.3.0" }
gc-arena = "0.2"
intmap = "0.7"
casey = "0.3"
enum-as-inner = "0.3"
log = "0.4"
rand = "0.8"
