[package]
name = "redscript-vm"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redscript.workspace = true
log.workspace = true
thiserror.workspace = true
rand.workspace = true
itertools.workspace = true
enum-as-inner.workspace = true
intmap.workspace = true
casey.workspace = true
gc-arena.workspace = true
